// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo esv secret describe "frodo esv secret describe --json --usage --secret-id esv-test-secret-pi --directory test/e2e/exports/all-separate/cloud": should describe the esv secret "esv-test-secret-pi" with usage from directory test/e2e/exports/all-separate/cloud and json output 1`] = `
"{
  _id: 'esv-test-secret-pi',
  activeVersion: '1',
  description: 'Secret that contains the value of pi',
  encoding: 'generic',
  lastChangeDate: '2023-12-14T15:22:28.519043Z',
  lastChangedBy: 'phales@trivir.com',
  loaded: true,
  loadedVersion: '1',
  useInPlaceholders: true,
  locations: [
    "realm.root-alpha.script.da7a96a8-7969-4dab-9c6e-a812938cc76d(name: 'test-script-with-secrets-and-variables').script.1",
    "realm.root-alpha.script.da7a96a8-7969-4dab-9c6e-a812938cc76d(name: 'test-script-with-secrets-and-variables').script.5"
  ]
}

Secret Versions:
[
  {
    createDate: '2023-12-14T15:22:28.938238Z',
    loaded: true,
    status: 'ENABLED',
    version: '1'
  }
]
"
`;

exports[`frodo esv secret describe "frodo esv secret describe --json --usage --secret-id esv-test-secret-pi --file test/e2e/exports/all/all.cloud.json": should describe the esv secret "esv-test-secret-pi" with usage from file test/e2e/exports/all/all.cloud.json and json output 1`] = `
"{
  _id: 'esv-test-secret-pi',
  activeVersion: '1',
  description: 'Secret that contains the value of pi',
  encoding: 'generic',
  lastChangeDate: '2023-12-14T15:22:28.519043Z',
  lastChangedBy: 'phales@trivir.com',
  loaded: true,
  loadedVersion: '1',
  useInPlaceholders: true,
  locations: [
    "realm.root-alpha.script.da7a96a8-7969-4dab-9c6e-a812938cc76d(name: 'test-script-with-secrets-and-variables').script"
  ]
}

Secret Versions:
[
  {
    createDate: '2023-12-14T15:22:28.938238Z',
    loaded: true,
    status: 'ENABLED',
    version: '1'
  }
]
"
`;

exports[`frodo esv secret describe "frodo esv secret describe -i esv-test-secret": should describe the esv secret "esv-test-secret" 1`] = `
"Name               │esv-test-secret                     
Active Version     │2                                   
Loaded Version     │2                                   
Status             │loaded                              
Description        │Secret Value for testing            
Modified           │8/9/2023, 7:00:01 PM                
Modifier           │b672336b-41ef-428d-ae4a-e0c082875377
Modifier UUID      │b672336b-41ef-428d-ae4a-e0c082875377
Encoding           │generic                             
Use In Placeholders│true                                

Secret Versions:
Version│Status │Loaded  │Created             
      2│active │loaded  │8/9/2023, 6:59:26 PM
      1│deleted│unloaded│9/2/2022, 5:46:36 PM
"
`;

exports[`frodo esv secret describe "frodo esv secret describe -ui esv-test-secret-pi -D test/e2e/exports/all-separate/cloud": should describe the esv secret "esv-test-secret-pi" with usage from directory test/e2e/exports/all-separate/cloud 1`] = `
"Name                     │esv-test-secret-pi                                                                                                   
Active Version           │1                                                                                                                    
Loaded Version           │1                                                                                                                    
Status                   │loaded                                                                                                               
Description              │Secret that contains the value of pi                                                                                 
Modified                 │12/14/2023, 3:22:28 PM                                                                                               
Modifier                 │phales@trivir.com                                                                                                    
Modifier UUID            │phales@trivir.com                                                                                                    
Encoding                 │generic                                                                                                              
Use In Placeholders      │true                                                                                                                 
Usage Locations (2 total)│realm.root-alpha.script.da7a96a8-7969-4dab-9c6e-a812938cc76d(name: 'test-script-with-secrets-and-variables').script.1
                         │realm.root-alpha.script.da7a96a8-7969-4dab-9c6e-a812938cc76d(name: 'test-script-with-secrets-and-variables').script.5

Secret Versions:
Version│Status│Loaded│Created               
      1│active│loaded│12/14/2023, 3:22:28 PM
"
`;

exports[`frodo esv secret describe "frodo esv secret describe -ui esv-test-secret-pi -f test/e2e/exports/all/all.cloud.json": should describe the esv secret "esv-test-secret-pi" with usage from file test/e2e/exports/all/all.cloud.json 1`] = `
"Name                     │esv-test-secret-pi                                                                                                 
Active Version           │1                                                                                                                  
Loaded Version           │1                                                                                                                  
Status                   │loaded                                                                                                             
Description              │Secret that contains the value of pi                                                                               
Modified                 │12/14/2023, 3:22:28 PM                                                                                             
Modifier                 │phales@trivir.com                                                                                                  
Modifier UUID            │phales@trivir.com                                                                                                  
Encoding                 │generic                                                                                                            
Use In Placeholders      │true                                                                                                               
Usage Locations (1 total)│realm.root-alpha.script.da7a96a8-7969-4dab-9c6e-a812938cc76d(name: 'test-script-with-secrets-and-variables').script

Secret Versions:
Version│Status│Loaded│Created               
      1│active│loaded│12/14/2023, 3:22:28 PM
"
`;

exports[`frodo esv secret describe "frodo esv secret describe -ui esv-test-secret-pi": should describe the esv secret "esv-test-secret-pi" with usage 1`] = `
"• Exported 22 am config entities.
• 13 mappings exported.
• Exported 17 email templates.
Error exporting idm config entity fidc/federation-EntraID
  Error reading config entity fidc/federation-EntraID
    Network error:
      URL: https://openam-frodo-dev.forgeblocks.com/openidm/config/fidc/federation-EntraID
      Status: 403
      Code: ERR_BAD_REQUEST
      Reason: Forbidden
      Message: Access denied
• Exported 69 config entities.
• Exported 7 internal roles
• Exported 7 custom nodes.
• Exported 2 realms.
• Exported 22 scriptTypes.
• Exported 13 secrets.
• Exported 2 global services.
• Exported 12 variables.
• Exported 2 alpha realm SAML2 providers.
• Exported 3 alpha realm circles of trust.
• Exported 3 alpha realm agent groups.
• Exported 11 alpha realm agents.
• Exported 17 alpha realm OAuth2 clients.
• 7 alpha realm providers exported.
• Exported 21 alpha realm journeys.
• Exported 3 alpha realm applications
• Exported 6 alpha realm policies.
• Exported 5 alpha realm policy sets.
• Exported 8 alpha realm resource types.
• Exported alpha realm 67 scripts.
• Exported 1 secret stores.
• Exported 10 alpha realm services.
• Exported 7 alpha realm themes.
• Exported 0 bravo realm SAML2 providers.
• Exported 0 bravo realm agent groups.
• Exported 0 bravo realm agents.
• Exported 3 bravo realm OAuth2 clients.
• 0 bravo realm providers exported.
• Exported 10 bravo realm journeys.
• Exported 0 bravo realm applications
• Exported 0 bravo realm policies.
• Exported 1 bravo realm policy sets.
• Exported 2 bravo realm resource types.
• Exported bravo realm 60 scripts.
• Exported 1 secret stores.
• Exported 9 bravo realm services.
• Exported 5 bravo realm themes.
✔ Successfully read 1 secret versions.
"
`;

exports[`frodo esv secret describe "frodo esv secret describe -ui esv-test-secret-pi": should describe the esv secret "esv-test-secret-pi" with usage 2`] = `
"Name                     │esv-test-secret-pi                                                                                                   
Active Version           │1                                                                                                                    
Loaded Version           │1                                                                                                                    
Status                   │loaded                                                                                                               
Description              │Secret that contains the value of pi                                                                                 
Modified                 │12/14/2023, 3:22:28 PM                                                                                               
Modifier                 │phales@trivir.com                                                                                                    
Modifier UUID            │phales@trivir.com                                                                                                    
Encoding                 │generic                                                                                                              
Use In Placeholders      │true                                                                                                                 
Usage Locations (2 total)│realm.root-alpha.script.da7a96a8-7969-4dab-9c6e-a812938cc76d(name: 'test-script-with-secrets-and-variables').script.1
                         │realm.root-alpha.script.da7a96a8-7969-4dab-9c6e-a812938cc76d(name: 'test-script-with-secrets-and-variables').script.5

Secret Versions:
Version│Status│Loaded│Created               
      1│active│loaded│12/14/2023, 3:22:28 PM
"
`;
